--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "capstone",
   "version": "1.0.0",
-  "description": "My capstone project",
+  "description": "Social network for developers",
   "main": "server.js",
-  "engines": {
-    "node": "15.8.0"
-  },
   "scripts": {
     "start": "node server",
     "server": "nodemon server",
@@ -13,7 +10,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
-  "author": "Can Guler",
+  "author": "John",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.0",
@@ -22,6 +19,7 @@
     "config": "^3.3.3",
     "express": "^4.17.1",
     "express-validator": "^6.8.1",
+    "fsevents": "^2.3.2",
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
@@ -30,5 +28,8 @@
   "devDependencies": {
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.6"
+  },
+  "engines": {
+    "node": "16.15.1"
   }
 }
