--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "config": "^3.3.3",
     "express": "^4.17.1",
     "express-validator": "^6.8.1",
-    "fsevents": "^2.3.2",
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
@@ -31,5 +30,8 @@
   },
   "engines": {
     "node": "16.15.1"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
   }
 }
